--- a/css/index_991.css
+++ b/css/index_991.css
@@ -113,7 +113,7 @@ table {
 }
 
 
-@media screen and (min-width:992px) and (max-width:1249px) {
+@media screen and (max-width:991px) {
 
     /* Main start */
     /* headerSlider */
@@ -140,7 +140,7 @@ table {
     }
 
     .slideImg {
-        width: 65%;
+        width: 100%;
         height: 100%;
         float: left;
     }
@@ -157,8 +157,8 @@ table {
         height: auto;
         width: 60%;
         top: 50%;
-        transform: translateY(-50%);
-        right: 0%;
+        left: 50%;
+        transform: translate(-50%, -50%);
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -251,12 +251,12 @@ table {
     /* Performance Information */
     #wrap2PerformanceInformation {
         width: 100%;
-        height: 950px;
+        height: 750px;
         padding: 150px 0 118px 0;
     }
 
     #informationTitle {
-        width: 950px;
+        width: 750px;
         height: 165px;
         margin: 0 auto;
     }
@@ -283,9 +283,9 @@ table {
     #infomationPoster::after {
         content: "";
         position: absolute;
-        top: 100px;
+        top: 70px;
         right: 15%;
-        bottom: -50px;
+        bottom: 30px;
         left: 0;
         background-color: #fdf5eb;
         z-index: -1;
@@ -293,7 +293,7 @@ table {
 
     #posterVisible {
         width: 81.6%;
-        height: 611px;
+        height: 400px;
         float: right;
         overflow: hidden;
     }
@@ -301,7 +301,7 @@ table {
     #posterHidden {
         position: relative;
         width: 100%;
-        height: 611px;
+        height: 400px;
     }
 
     .hiddenSwiper {
@@ -311,8 +311,8 @@ table {
     .poster {
         float: left;
         margin-left: 0;
-        width: 290px !important;
-        height: 460px;
+        width: 220px !important;
+        height: 380px !important;
         margin: 0 10px;
     }
 
@@ -379,18 +379,18 @@ table {
     /* Poster overlay */
     .posterOverlay {
         width: 100%;
-        height: 100%;
+        height: 93.5%;
         background-color: rgba(0, 0, 0, 0.8);
         display: flex;
         flex-direction: column;
         justify-content: flex-end;
-        padding: 0 0 50px 5px;
+        padding: 0 0 20px 5px;
     }
 
     .posterOverlay h3 {
         color: white;
         font-weight: bold;
-        font-size: 30px;
+        font-size: 22px;
         font-family: 'EliceDigitalBaeum-Bd';
         margin-left: 15px;
     }
@@ -398,14 +398,14 @@ table {
     .pofa-color {
         color: white;
         font-weight: bold;
-        font-size: 12px;
+        font-size: 7px;
     }
 
     .poster_text a {
         color: #f18b1e;
         font-weight: bold;
-        font-size: 12px;
-        padding-left: 10%;
+        font-size: 7px;
+        padding-left: 2%;
         font-family: 'WooridaumL';
     }
 
@@ -426,7 +426,7 @@ table {
     /* performance post */
     #wrap3PerformancePost {
         width: 100%;
-        height: 990px;
+        height: 2100px;
         padding: 80px 0;
         position: relative;
     }
@@ -443,7 +443,7 @@ table {
     }
 
     #performancePost {
-        width: 950px;
+        width: 750px;
         margin: 0 auto;
         height: auto;
     }
@@ -467,19 +467,21 @@ table {
 
     #postBox {
         width: 100%;
-        height: 600px;
+        height: 1000px;
         display: flex;
-        flex-direction: row;
+        flex-direction: column;
         justify-content: space-between;
     }
 
     .posts {
-        width: 49%;
+        width: 85%;
         height: 100%;
         display: flex;
         flex-direction: column;
         flex-wrap: wrap;
         justify-content: space-between;
+        margin: 0 auto;
+        margin-bottom: 30px;
     }
 
     .postBigBox {
@@ -541,22 +543,22 @@ table {
 
     .overlayPost h3 {
         color: #fff;
-        font-size: 25px;
+        font-size: 30px;
         padding-left: 15px;
         font-family: 'EliceDigitalBaeum-Bd';
         font-weight: bold;
     }
 
     .postText span {
-        font-size: 10px;
-        padding-left: 15px;
+        font-size: 15px;
+        padding-left: 14px;
     }
 
     .postText a {
         color: #f18b1e;
-        font-size: 10px;
+        font-size: 14px;
         font-weight: bold;
-        padding-left: 1.7%;
+        padding-left: 1%;
         font-family: 'WooridaumB';
     }
 
@@ -566,12 +568,12 @@ table {
     }
 
     #morePost {
-        width: 950px;
-        margin: 50px auto;
+        width: 750px;
+        margin: 680px auto;
     }
 
     .viewPost {
-        margin-left: 68%;
+        margin-left: 55%;
         width: 300px;
         border-bottom: 1px solid #f18b1e;
         padding: 10px;
@@ -589,15 +591,15 @@ table {
     /* Performance section Photo Start */
     #wrap4PerformancePhoto {
         width: 100%;
-        height: 110vw;
+        height: 280vw;
         padding: 120px 0;
         background-image: url('../img/index/middle_logo.png');
         background-repeat: no-repeat;
-        background-position: 90% 105%;
+        background-position: 90% 95%;
     }
 
     #photoTitle {
-        width: 950px;
+        width: 750px;
         height: 240px;
         margin: 0 auto;
     }
@@ -636,12 +638,13 @@ table {
         width: 100%;
         height: 66vw;
         display: flex;
+        flex-direction: row;
         flex-wrap: wrap;
     }
 
     .photoBox {
-        flex: 0 0 25%;
-        max-width: 25%;
+        flex: 0 0 50%;
+        width: 50%;
     }
 
     .performancePhoto {
@@ -691,23 +694,23 @@ table {
     }
 
     .photo_1 {
-        padding-left: 0px !important;
+        /* padding-left: 0px !important; */
     }
 
     .photo_4 {
-        padding-right: 0px !important;
-        padding-top: 45%;
+        /* padding-right: 0px !important; */
+        padding-top: 2%;
     }
 
     /* 안산문화예술의전당 사업소개 */
     #wrap5ProjectIntroduction {
         width: 100%;
-        height: 840px;
+        height: 700px;
         padding-bottom: 120px;
     }
 
     #projectTitle {
-        width: 950px;
+        width: 750px;
         height: 180px;
         margin: 0 auto;
     }
@@ -725,8 +728,8 @@ table {
     }
 
     #projectCard {
-        width: 950px;
-        height: 480px;
+        width: 700px;
+        height: 400px;
         margin: 0 auto;
         display: flex;
         flex-wrap: wrap;
@@ -769,23 +772,23 @@ table {
         width: 75%;
         height: 100%;
         background-color: #fdf5eb;
-        padding: 20px;
+        padding: 5px 10px;
         font-family: 'NanumBarunpen';
     }
 
     .cardText h3 {
         height: 28%;
-        font-size: 25px;
+        font-size: 20px;
     }
 
     .cardText h4 {
         height: 50%;
-        font-size: 17px;
+        font-size: 15px;
         font-weight: 500;
     }
 
     .cardText p {
-        font-size: 15px;
+        font-size: 13px;
         font-weight: bold;
     }
 
