20220627_모바일 반응형 시작

--- a/css/index_1249.css
+++ b/css/index_1249.css
@@ -314,6 +314,7 @@ table {
         width: 290px !important;
         height: 460px;
         margin: 0 10px;
+        cursor: -webkit-grab;
     }
 
     .poster_1 {
